# lottie-rl-env

./: .gitignore  AGENTS.md  Developer.json  README.md  Work in Progresss.json  __init__.py  client.py  ghost_running.json  inference.py  inference_debug.py  lottie_cli.py  models.py  opencv_exploration.py  openenv.yaml  pyproject.toml  requirements.txt  robot thinking.json
server/: Dockerfile  __init__.py  app.py  index.html  lottie_env_environment.py
server/assets/: agent_score_0.98.json  hard_agent.json  medium_agent_score_0.91.json  toggle.json
tests/: conftest.py  test_app_routes.py  test_environment.py
